examples/test/testpolicy9167.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9167
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key24: value32
      key47: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value40
          key9: value17
          key28: value15
      podSelector:
        matchLabels:
          key19: value22
          key21: value19
